--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
   <url>https://bitbucket.org/yildiz-engine-team/common-geometry</url>
 
   <artifactId>common-geometry</artifactId>
-  <version>1.0.2-SNAPSHOT</version>
+  <version>1.0.2</version>
 
   <packaging>jar</packaging>
   <inceptionYear>2017</inceptionYear>
@@ -46,7 +46,7 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>be.yildiz-games</groupId>
-    <version>2.2.0-SNAPSHOT</version>
+    <version>2.2.2</version>
   </parent>
 
   <dependencies>
