--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
   <url>https://bitbucket.org/yildiz-engine-team/common-geometry</url>
 
   <artifactId>common-geometry</artifactId>
-  <version>1.0.4</version>
+  <version>1.0.5-SNAPSHOT</version>
 
   <packaging>jar</packaging>
   <inceptionYear>2017</inceptionYear>
