--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <!--
   ~ This file is part of the Yildiz-Engine project, licenced under the MIT License  (MIT)
   ~
@@ -23,29 +24,32 @@
   ~
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
-  <name>Yildiz Common Geometry</name>
-  <description>Common Geometry library for the yildiz project, contains utilities to handle geometry concepts.
-  </description>
+
+  <name>Yildiz-Engine Common Geometry</name>
+  <description>Common Geometry library for the yildiz project, contains utilities to handle geometry concepts.</description>
+  <inceptionYear>2017</inceptionYear>
   <url>https://engine.yildiz-games.be</url>
 
   <artifactId>common-geometry</artifactId>
   <version>1.0.7-SNAPSHOT</version>
 
-  <packaging>jar</packaging>
-  <inceptionYear>2017</inceptionYear>
-  <scm>
-    <connection>scm:git:https://github.com/yildiz-online/common-geometry</connection>
-    <developerConnection>scm:git:https://github.com/yildiz-online/common-geometry</developerConnection>
-    <url>https://github.com/yildiz-online/common-geometry</url>
-  </scm>
   <parent>
     <artifactId>parent</artifactId>
     <groupId>be.yildiz-games</groupId>
     <version>3.0.5</version>
   </parent>
+
+  <packaging>jar</packaging>
+
+  <scm>
+    <connection>scm:git:https://github.com/yildiz-online/common-geometry</connection>
+    <developerConnection>scm:git:https://github.com/yildiz-online/common-geometry</developerConnection>
+    <url>https://github.com/yildiz-online/common-geometry</url>
+  </scm>
 
   <dependencies>
     <dependency>
